apg4b/AP1/in_1.txt
./Main.cpp: In function ‘int main()’:
./Main.cpp:6:1: error: expected ‘;’ before ‘}’ token
 }
 ^
